--- a/tutorial-mongo/pom.xml
+++ b/tutorial-mongo/pom.xml
@@ -56,6 +56,12 @@
 			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+			<version>2.5.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
