--- a/tutorial-mongo/src/main/resources/application.properties
+++ b/tutorial-mongo/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.data.mongodb.host= localhost
 spring.data.mongodb.port= 27017
 spring.data.mongodb.database= school
 
+
+# Level for loggers on classes inside the root package "netgloo" (and its 
+# sub-packages)
+# Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
+logging.level.com = DEBUG
+
+# Specify the level for spring boot and hibernate's loggers
+logging.level.org.springframework.web = DEBUG
+logging.level.org.hibernate = ERROR
+
+# Log file location (in addition to the console)
+logging.file = ${HOME}/logs/application.log
+
